# multi-model-agent

./: .gitignore  README.md  langgraph_model_selection.ipynb  langgraph_recursive_multimodel_selection.ipynb  main.py  pyproject.toml
crew_test_agent/: README.md  pyproject.toml
crew_test_agent/output/: report.md
crew_test_agent/src/crew_test_agent/: crew.py  main.py
