[project]
name = "crew_test_agent"
version = "0.1.0"
description = "crew-test-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
crew_test_agent = "crew_test_agent.main:run"
run_crew = "crew_test_agent.main:run"
train = "crew_test_agent.main:train"
replay = "crew_test_agent.main:replay"
test = "crew_test_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
